--- a/searching-for-style.css
+++ b/searching-for-style.css
@@ -3,22 +3,26 @@ Google's content changed size depending on the device used
 to access Google's home page. I emulated multiple screen sizes */
 
 body {
-    font-family: 'Times New Roman', Times, serif;
-    line-height: 15px;
-    color: rgb(181, 181, 181);
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    color: black;
     background-color: white;
 }
 
 nav {
     display: flex;
     width: 100%;
-    margin: 10px 50px 0px 0px;
-    flex-direction: column;
+    margin: 23px 0px 0px 0px;
+    flex-direction: row;
+    
     
 }
 
 a {
     text-decoration: none;
+    color: black;
+    padding-right: 15px;
+    opacity: 0.75;
 }
 
 a:hover {
@@ -26,13 +30,11 @@ a:hover {
 }
 
 .links-to-the-left {
-    align-self: flex-start; /* need something to do it horizontally. This
-    is causing my links to vertically align. ALmost! Getting there! */
+    margin-left: 17px;
 }
 
 .links-to-the-right {
-    align-self: flex-end;
-    
+    margin-left: auto;
 }
 
 main {
