--- a/searching-for-style.css
+++ b/searching-for-style.css
@@ -171,7 +171,7 @@ main {
     height: 15px;
 }
 
-.input {
+#input {
     width: 100%;
     height: 44px;
     background-color: transparent;
@@ -179,7 +179,7 @@ main {
     outline: none;
 }
 
-.input:focus {
+#input:focus {
     outline: none;
     font-size: 16px;
 }
